Bug 92992 - [All] dmesg error: pci_pm_runtime_suspend(): intel_runtime_suspend+0x0/0x240 [i915] returns -11
Summary: [All] dmesg error: pci_pm_runtime_suspend(): intel_runtime_suspend+0x0/0x240 ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Imre Deak
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-18 13:26 UTC by Imre Deak
Modified: 2017-07-24 22:44 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Imre Deak 2015-11-18 13:26:58 UTC
The condition which triggers this error message in dmesg is normal. The error message should be tuned down, so that the automated tests don't pick it up and flag an error.

One way to fix this:
http://lists.freedesktop.org/archives/intel-gfx/2015-November/080399.html
Comment 1 Jani Nikula 2015-11-18 13:41:46 UTC
Highest priority to get rid of dmesg noise in BAT testing, assign to Imre who has the patch.
Comment 2 Daniel Vetter 2015-11-26 13:20:32 UTC
Temporary fixed with a private branch patch on topic/core-for-CI:

commit 64a93eaebb44c35c50e10144923189c8558d043d
Author: Imre Deak <imre.deak@intel.com>
Date:   Wed Nov 18 12:56:28 2015 +0200

    PCI / PM: tune down RPM suspend error message with EBUSY and EAGAIN retval

We "only" need to make sure here that the patch goes to the right upstream maintainer.
Comment 3 Marius Vlad 2015-12-03 17:43:22 UTC
Tested this with

commit c9026da2526abed2b3cd1309d9bad7c009826aab
Author: Maarten Lankhorst <maarten.lankhorst@ubuntu.com>
Date:   Thu Dec 3 16:14:29 2015 +0100

    drm-intel-nightly: 2015y-12m-03d-15h-13m-50s UTC integration manifest

The messages on the kernel ring buffer are printed if debug log level is enabled -- which is by default on dmesg -- assuming that piglit uses warn this should not appear any more.

Can be easily triggered each time by running tests/pm_rpm using gem-execbuf-stress subtest.

Think this can be closed for now.
Comment 4 Marius Vlad 2015-12-04 10:19:44 UTC
So apparently, this reached v5 on m-l.

http://lists.freedesktop.org/archives/intel-gfx/2015-November/081630.html.

It is fixed in drm-intel-nightly (w/ v2), but will eventually be 
replaced by v5.
Comment 5 Jani Nikula 2015-12-04 13:24:38 UTC
We have the fix in a topical branch to shut up the warnings in nightly, but we need to follow-up the commit making it to upstream linux via the right subsystem.
Comment 6 Imre Deak 2015-12-07 16:08:03 UTC
The fix is merged now to Linus' tree and included in -nightly, so closing this.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.