PCI / PM: tune down RPM suspend error message with EBUSY and EAGAIN retval

The runtime PM core doesn't treat EBUSY and EAGAIN retvals from the driver
suspend hooks as errors, but they still show up as errors in dmesg. Tune
them down.

One problem caused by this was noticed by Daniel: the i915 driver
returns EAGAIN to signal a temporary failure to suspend and as a request
towards the RPM core for scheduling a suspend again. This is a normal
event, but the resulting error message flags a breakage during the
driver's automated testing which parses dmesg and picks up the error.

v2:
- fix compile breake when CONFIG_PM_SLEEP=n (0-day builder)

Reported-by: Daniel Vetter <daniel.vetter@intel.com>
Signed-off-by: Imre Deak <imre.deak@intel.com>
Link: http://patchwork.freedesktop.org/patch/msgid/1447844188-21999-1-git-send-email-imre.deak@intel.com
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=92992
Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>